sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:41: error: ';' expected but ')' found.
    val nbMoves:Int = (baseLibre-baseCible+n-1)%n)
                                                 ^